<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ConTra</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="latestCases">Latest notifications</string>
    <string name="title_overview">Overview</string>
    <string name="notification_radius">Radius:</string>
    <string name="notification_date">Date:</string>
    <string name="pund_no_radius_available">No radius available</string>
    <string name="pund_no_date_available">No time and date available</string>
    <string name="pund_activity_description">Here the activities of the infected person are listed, before they tested positive. By means of these activities you can review, if there has been a potential infection.</string>
    <string name="pund_activities">Activities</string>
    <string name="pund_subtitle">Overview</string>
    <string name="pund_title">Notification</string>
    <string name="coronaCase_status">Status</string>
    <string name="country_prompt">Country</string>
    <string name="lessDetails">Less Details</string>
    <string name="moreDetails">More Details</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="activityDialogTitle">New activity</string>
    <string name="hintActivityDecription" translatable="false">Description</string>
    <string name="hintActivityLocation">Location</string>
    <string name="hintActivityTime">Time</string>
    <string name="hintActivityDate">Date</string>
    <string name="hintActivityTitle">Title (z.B. Shopping)</string>
    <string name="sendCase">Send</string>
    <string name="showAktivity">Show</string>
    <string name="hideAktivity">Hide</string>
    <string name="activity">Activity</string>
    <string name="lastActivities">Last activities</string>
    <string name="allPersonsInRadius">Notify people in a radius of</string>
    <string name="notification">Notification</string>
    <string name="corona_status">Status</string>
    <string name="caseDate">Case date</string>
    <string name="placeOfResidence">Place of residence</string>
    <string name="patientID">Patient ID</string>
    <string name="fallMelden">Dashboard</string>
    <string name="hello">Hello!</string>
    <string name="city">City</string>
    <string name="register_plz">Zip Code</string>
    <string name="register_street">Street</string>
    <string name="registerText">Please register</string>
    <string name="registration_succsessfull">Registration successful!</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="going_to_login">Register</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="title_activity_register_privat_user">RegisterPrivatUser</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="welcome">Welcome !</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_login">Login</string>
</resources>