<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingLeft="4dp"
    android:paddingRight="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:elevation="4dp"
        app:cardElevation="4dp"
        android:background="@drawable/dummy_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notificationDetailsView"
                android:layout_width="353dp"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@color/notifiaction_bg_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/notificationDateTime"
                    android:layout_width="167dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="116dp"
                    android:layout_marginRight="116dp"
                    android:fontFamily="@font/regular"
                    android:text="Sample Date and Time"
                    android:textColor="@color/notifiaction_textcolor_red"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/date"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notificationRadius"
                    android:layout_width="117dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/regular"
                    android:text="Sample Radius"
                    android:textColor="@color/notifiaction_textcolor_red"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.048"
                    app:layout_constraintStart_toEndOf="@+id/radius_text"
                    app:layout_constraintTop_toBottomOf="@+id/notificationDateTime"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/notification_date"
                    android:textColor="@color/notifiaction_textcolor_red"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/notificationRadius"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.619" />

                <TextView
                    android:id="@+id/radius_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/notification_radius"
                    android:textColor="@color/notifiaction_textcolor_red"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.027"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notificationDateTime"
                    app:layout_constraintVertical_bias="0.333" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/notificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/bold"
                android:text="Sample Status"
                android:textColor="@color/textColor_dark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/activityDetailsView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/notificationShowHideDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/light"
                android:text="@string/moreDetails"
                android:textColor="@color/textColor_dark_light"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.961"
                app:layout_constraintStart_toEndOf="@+id/notificationTitle"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>